# fuzzamoto

./: .gitignore  404.html  Cargo.toml  Dockerfile  Dockerfile.bug  Dockerfile.coverage  Dockerfile.coverage.generic  Dockerfile.libafl  Dockerfile.stability  LICENSE  README.md  bug-reproducer.py  index.html  print.html  searchindex.js  searchindex.json
.github/workflows/: book.yml  images.yml  rust.yml  test.yml
bugs/boolean-conversion/: benchmark.yaml  bug.diff
bugs/cve-2013-5700/: benchmark.yaml  bug.diff
bugs/cve-2018-17144/: benchmark.yaml  bug.diff
bugs/cve-2024-35202/: benchmark.yaml  bug.diff
bugs/findanddelete/: benchmark.yaml  bug.diff
bugs/minimal-witness/: benchmark.yaml  bug.diff
bugs/unsigned-txver/: benchmark.yaml  bug.diff
ci/: libafl.justfile  scenario-http-server.justfile
contributing/: integrating.html  ir.html  scenarios.html
design/: ir.html  scenarios.html  snapshot-fuzzing.html
doc/: book.toml
doc/src/: README.md  SUMMARY.md
doc/src/contributing/: integrating.md  ir.md  scenarios.md
doc/src/design/: ir.md  scenarios.md  snapshot-fuzzing.md
doc/src/usage/: aflpp.md  cli.md  coverage.md  libafl.md  reproducing.md  requirements.md  target-patches.md
fuzzamoto/: Cargo.toml
fuzzamoto-cli/: Cargo.toml
fuzzamoto-cli/src/: error.rs  ir.rs  main.rs
fuzzamoto-cli/src/commands/: bug_repro.rs  coverage.rs  coverage_batch.rs  init.rs  ir.rs  mod.rs  record.rs  stability.rs
fuzzamoto-cli/src/utils/: file_ops.rs  mod.rs  nyx.rs  process.rs
fuzzamoto-ir/: Cargo.toml
fuzzamoto-ir/src/: bloom.rs  builder.rs  compiler.rs  errors.rs  instruction.rs  lib.rs  metadata.rs  operation.rs  variable.rs
fuzzamoto-ir/src/generators/: address.rs  advance_time.rs  block.rs  block_txn.rs  blocktxn_gen.rs  bloom_filter.rs  compact_block.rs  compact_filters.rs  getaddr.rs  getdata.rs  mod.rs  send_raw_message.rs  tx.rs  txo.rs  witness.rs
fuzzamoto-ir/src/minimizers/: block.rs  cutting.rs  instr_block.rs  mod.rs  nopping.rs
fuzzamoto-ir/src/mutators/: blocktxn.rs  combine.rs  concat.rs  input.rs  mod.rs  operation.rs
fuzzamoto-libafl/: Cargo.toml
fuzzamoto-libafl/src/: client.rs  fuzzer.rs  input.rs  instance.rs  main.rs  monitor.rs  mutators.rs  options.rs  schedulers.rs  stages.rs
fuzzamoto-libafl/src/feedbacks/: mod.rs  recv.rs
fuzzamoto-libafl/src/stages/: bench_stats.rs  mod.rs  probe.rs  stability_check.rs  verify_timeouts.rs
fuzzamoto-nyx-sys/: Cargo.toml  build.rs  crash_handler_test.c
fuzzamoto-nyx-sys/src/: lib.rs  nyx-agent.c  nyx-crash-handler.c  nyx.h
fuzzamoto-scenarios/: Cargo.toml  rpcs.txt
fuzzamoto-scenarios/grammars/: compact_blocks.btcser  http_server.btcser  simple_regtest.btcser
fuzzamoto/src/: connections.rs  dictionaries.rs  lib.rs  oracles.rs  rt_data.rs  runners.rs  scenarios.rs  taproot.rs
fuzzamoto/src/scenarios/: generic.rs  mod.rs
fuzzamoto/src/targets/: bitcoin_core.rs  mod.rs  recorder.rs
fuzzamoto/src/test_utils/: mining.rs  mod.rs
patches/: aflplusplus.patch
target-patches/: bitcoin-core-aggressive-rng.patch  bitcoin-core-ir-denylist.txt  bitcoin-core-rng.patch  remove_fcf_protection.patch
target-patches/bugs/: README.md
target-patches/bugs/bitcoin-core/: 0001-Revert-p2p-don-t-find-1p1cs-for-reconsiderable-txns-.patch  0002-p2p-Reintroduce-blocktxn-assertion-crash-bug.patch
target-patches/go-coverage/: shmem-sancov.c
tests/: libafl.justfile  scenario-http-server.justfile
tests/ci/: run-http-server.sh
usage/: aflpp.html  cli.html  coverage.html  libafl.html  reproducing.html  requirements.html  target-patches.html
