[workspace]
resolver = "3"
members = [
  "fuzzamoto",
  "fuzzamoto-cli",
  "fuzzamoto-ir",
  "fuzzamoto-nyx-sys",
  "fuzzamoto-scenarios",
  "fuzzamoto-libafl",
]
exclude = ["vendor/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Niklas Gögge <n.goeggi@gmail.com>"]
license = "MIT"
repository = "https://github.com/dergoegge/fuzzamoto"

[workspace.lints.clippy]
# Deny 
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

[workspace.lints.rust]
warnings = "deny"
