[package]
name = "fuzzamoto-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.11.6"
fuzzamoto = { path = "../fuzzamoto" }
log = "0.4.25"
