[package]
name = "fuzzamoto-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
clap = { version = "4.4", features = ["derive", "string"] }
env_logger = "0.11.6"
log = "0.4.25"
postcard = { version = "1.1.1", features = ["alloc"], default-features = false }
rand = { version = "0.8.5", features = ["small_rng"] }

fuzzamoto = { path = "../fuzzamoto" }
fuzzamoto-ir = { path = "../fuzzamoto-ir" }
serde_json = "1.0.140"
serde_yaml_ng = "0.10.0"
