[package]
name = "fuzzamoto-libafl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = []

fuzz = ["compile_in_vm"]
reproduce =  ["compile_in_vm"]

## Build with a simple event manager instead of Launcher - don't fork, and crash after the first bug.
simplemgr = []
# Compile ir inputs inside the nyx vm within the fuzzing scenario. This allows
# us to use less shared memory between the fuzzer and nyx for the input buffer.
#
# Ir inputs also tend to be much smaller than their compiled version.
compile_in_vm = []

introspection = ["libafl/introspection"]

[build-dependencies]
vergen = { version = "8.2.1", features = [
  "build",
  "cargo",
  "git",
  "gitcl",
  "rustc",
  "si",
] }

[dependencies]
clap = { version = "4.5.18", features = ["derive", "string"] }

libafl = { git = "https://github.com/AFLplusplus/LibAFL.git", tag = "0.15.2", features = ["tui_monitor"] }
libafl_bolts = { git = "https://github.com/AFLplusplus/LibAFL.git", tag = "0.15.2", features = ["errors_backtrace"] }
libafl_nyx = { git = "https://github.com/AFLplusplus/LibAFL.git", tag = "0.15.2" }

log = { version = "0.4.20" }
nix = { version = "0.29.0", features = ["fs"] }
rangemap = { version = "1.5.1" }
readonly = { version = "0.2.12" }
typed-builder = { version = "0.20.0" }

fuzzamoto-ir = { path = "../fuzzamoto-ir" }

serde = { version = "1.0.197", features = ["derive"] }
postcard = { version = "1.1.1", features = [
  "alloc",
], default-features = false }

rand = { version = "0.8.5", features = ["small_rng"] }

env_logger = "0.11.6"
