[package]
name = "fuzzamoto-libafl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = []

fuzz = ["compile_in_vm"]
reproduce = ["compile_in_vm"]

## Build with a simple event manager instead of Launcher - don't fork, and crash after the first bug.
simplemgr = []
# Compile ir inputs inside the nyx vm within the fuzzing scenario. This allows
# us to use less shared memory between the fuzzer and nyx for the input buffer.
#
# Ir inputs also tend to be much smaller than their compiled version.
compile_in_vm = []

introspection = ["libafl/introspection"]

# Collect stats for benchmarking purposes
bench = []

[lints]
workspace = true

[build-dependencies]
vergen = { version = "8.2.1", features = [
  "build",
  "cargo",
  "git",
  "gitcl",
  "rustc",
  "si",
] }

[dependencies]
clap = { version = "4.5.18", features = ["derive", "string", "env"] }

libafl = { git = "https://github.com/AFLplusplus/LibAFL.git", rev = "3b21190452d7289535aee443799ea55d940915c5", features = [
  "tui_monitor",
] }
libafl_bolts = { git = "https://github.com/AFLplusplus/LibAFL.git", rev = "3b21190452d7289535aee443799ea55d940915c5", features = [
  "errors_backtrace",
] }
libafl_nyx = { git = "https://github.com/AFLplusplus/LibAFL.git", rev = "3b21190452d7289535aee443799ea55d940915c5" }

log = { version = "0.4.20" }
nix = { version = "0.30.1", features = ["fs"] }
rangemap = { version = "1.5.1" }
readonly = { version = "0.2.12" }
typed-builder = { version = "0.20.0" }
num-traits = { version = "0.2.19", default-features = false }
strum = { version = "0.27", features = ["derive"] }

fuzzamoto = { path = "../fuzzamoto" }
fuzzamoto-ir = { path = "../fuzzamoto-ir" }

serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.140"
postcard = { version = "1.1.1", features = ["alloc"], default-features = false }
base64 = "0.22.1"
regex = "1.12.2"

rand = { version = "0.8.5", features = ["small_rng"] }
env_logger = "0.11.6"

reqwest = { version = "0.11", features = ["blocking"] }
