[package]
name = "fuzzamoto-nyx-sys"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
links = "nyx_agent"
description = "Low-level FFI bindings to the Nyx agent for fuzzamoto"

[dependencies]

[build-dependencies]
cc = "1.0"

[features]
default = []