[package]
name = "fuzzamoto-scenarios"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
fuzz = ["compile_in_vm", "force_send_and_ping", "nyx"]
reproduce = ["compile_in_vm", "force_send_and_ping", "fuzzamoto/reproduce"]
nyx_log = ["nyx"]

nyx = ["dep:fuzzamoto-nyx-sys"]
compile_in_vm = []
# Force every sent message to be followed by two ping/pong roundtrips
force_send_and_ping = []
# Use BIP-324 v2 transport instead of v1
v2transport = []

# Compile for block template validation
oracle_blocktemplate = []
# Compile for netsplit bug detection
oracle_netsplit = []
# Compile for consensus bug detection. Note: this relies on fuzzamoto-libafl's
# hang detection.
oracle_consensus = []
# Compile for inflation bug detection
oracle_inflation = []

[lints]
workspace = true

[dependencies]
fuzzamoto = { path = "../fuzzamoto" }
fuzzamoto-ir = { path = "../fuzzamoto-ir" }
fuzzamoto-nyx-sys = { path = "../fuzzamoto-nyx-sys", optional = true }

bitcoin = "0.32.0"
bitcoin_hashes = "0.16.0"
io = { package = "bitcoin-io", version = "0.1.1" }
env_logger = "0.11.6"
log = "0.4.25"
serde_json = "1.0.140"
arbitrary = { version = "1.4.1", features = ["derive"] }
hex = "0.4.3"
base64 = "0.22.1"
postcard = { version = "1.1.1", features = ["alloc"], default-features = false }

[[bin]]
name = "scenario-generic"
path = "bin/generic.rs"

[[bin]]
name = "scenario-http-server"
path = "bin/http_server.rs"

[[bin]]
name = "scenario-compact-blocks"
path = "bin/compact_blocks.rs"

[[bin]]
name = "scenario-wallet-migration"
path = "bin/wallet_migration.rs"

[[bin]]
name = "scenario-import-mempool"
path = "bin/import_mempool.rs"

[[bin]]
name = "scenario-rpc-generic"
path = "bin/rpc_generic.rs"

[[bin]]
name = "scenario-ir"
path = "bin/ir.rs"
