[package]
name = "fuzzamoto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
inherit_stdout = [] # Inherit stdout from the fuzz target(s)
nyx = ["dep:fuzzamoto-nyx-sys"] # Use the nyx runner
reduced_pow = [] # Use reduced POW for block generation

[dependencies]
bitcoin = "0.31.0"
bitcoin_hashes = "0.16.0"
corepc-node = "0.5.0"
env_logger = "0.11.6"
log = "0.4.25"
serde_json = "1.0"

fuzzamoto-nyx-sys = { path = "../fuzzamoto-nyx-sys", optional = true }
