[package]
name = "fuzzamoto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
fuzz = ["nyx", "reduced_pow"]
reproduce =  ["reduced_pow", "inherit_stdout"]

inherit_stdout = [] # Inherit stdout from the fuzz target(s)
nyx = ["dep:fuzzamoto-nyx-sys"] # Use the nyx runner
reduced_pow = [] # Use reduced POW for block generation

[lints]
workspace = true

[dependencies]
bitcoin = "0.32.0"
bitcoin_hashes = "0.16.0"
io = { package = "bitcoin-io", version = "0.1.1" }
corepc-node = { version = "0.10.0", features = ["29_0"] }
env_logger = "0.11.6"
log = "0.4.25"
serde_json = "1.0.140"
serde = { version = "1.0.197", features = ["derive"] }

fuzzamoto-nyx-sys = { path = "../fuzzamoto-nyx-sys", optional = true }
